syntax = "proto3";

package product;
option go_package = "../model";

import "product.proto";

enum InputType {
    SPDX = 0; // create BoM as SPDX
    HUMAN = 1; // create BoM as human readable
    CUSTOM = 2; // create BoM as custom report
}

message InputValue {
    string file_path = 1;
    InputType type = 2;
}

service BomService {
    rpc CreateBom(InputValue) returns (product.Response) {}
}